--- a/SocialMediaApp/app/src/main/res/layout/commentpopup.xml
+++ b/SocialMediaApp/app/src/main/res/layout/commentpopup.xml
@@ -13,14 +13,16 @@
         android:layout_alignParentTop="true"
         android:gravity="center">
 
-        <!--<TextView-->
-            <!--android:layout_gravity="center"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Some One and 20 Others Like this"-->
-            <!--android:textColor="@color/black"-->
-            <!--android:textStyle="bold"-->
-            <!--android:layout_margin="5dp"/>-->
+        <TextView
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginLeft="20dp"
+            android:text="Be The First to Like This"
+            android:textColor="@color/appBlue"
+            android:fontFamily="@font/pt_sans_web_bold"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <ListView
@@ -31,6 +33,7 @@
         android:layout_above="@+id/comment_section"
         android:transcriptMode="alwaysScroll"
         android:stackFromBottom="true"
+        android:divider="@null"
         android:layout_marginBottom="0dp"/>
 
     <LinearLayout
