--- a/SocialMediaApp/app/src/main/res/layout/form_layout.xml
+++ b/SocialMediaApp/app/src/main/res/layout/form_layout.xml
@@ -48,19 +48,17 @@
 
                 <EditText
                     android:id="@+id/editText_textpost"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:layout_centerVertical="true"
-                    android:background="@null"
-                    android:ems="10"
-
-                    android:fontFamily="@font/pt_sans_web_regular"
-                    android:gravity="center"
                     android:hint="@string/textpost"
-                    android:inputType="textPersonName"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:maxLines="5"
-                    android:textColorHint="#000"
-                    android:textSize="15sp" />
+                    android:gravity="center"
+                    android:layout_marginRight="10dp"
+                    android:focusable="true"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="12sp"
+                    android:textColor="@color/black"
+                    android:background="#00000000"/>
 
                 <ImageView
                     android:id="@+id/imagepreview"
@@ -72,6 +70,7 @@
                     android:layout_marginEnd="23dp"
                     android:adjustViewBounds="true"
                     android:layout_marginRight="23dp"
+                    android:background="@drawable/camera_large"
                     />
             </RelativeLayout>
 
@@ -108,8 +107,8 @@
                 android:id="@+id/video_upload"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/relativeLayout6"
-                android:layout_alignStart="@+id/relativeLayout6"
+                android:layout_alignLeft="@+id/gallery_upload"
+               android:layout_marginLeft="50dp"
                 android:layout_alignTop="@+id/gallery_upload"
                 android:background="@drawable/videoicon" />
 
