--- a/SocialMediaApp/app/src/main/res/layout/activity_share_post.xml
+++ b/SocialMediaApp/app/src/main/res/layout/activity_share_post.xml
@@ -37,111 +37,90 @@
             >
 
             <TextView
-                android:id="@+id/t1"
+                android:id="@+id/user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="38dp"
+                android:layout_alignTop="@+id/profile_image"
+                android:layout_marginStart="11dp"
+                android:layout_marginTop="13dp"
+                android:layout_toEndOf="@+id/profile_image"
                 android:fontFamily="@font/pt_sans_web_bold"
-                android:textSize="20sp"
-                android:text="Share On Your TimeLine" />
+                android:text="Pooja gupta"
+                android:textStyle="italic"
+                android:textSize="15sp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+
+                android:layout_alignStart="@+id/relative_complete"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="19dp"
+                android:background="@drawable/user" />
 
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:layout_below="@+id/t1"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/user_name"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/border_layout"
                 android:id="@+id/relative_complete">
 
                 <EditText
                     android:id="@+id/post_text"
-                    android:layout_width="220dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/profile_image"
-                    android:layout_marginLeft="17dp"
-                    android:layout_marginStart="17dp"
-                    android:layout_marginTop="13dp"
-                    android:layout_toEndOf="@+id/profile_image"
-                    android:layout_toRightOf="@+id/profile_image"
+                    android:padding="20dp"
                     android:fontFamily="@font/pt_sans_web_regular"
                     android:maxLines="5"
                     android:background="@null"
                     android:cursorVisible="false"
-                    android:hint="write something.."
+                    android:hint="say something..."
                     android:textColor="@color/text_grey"
                     android:textSize="15sp" />
 
-                <RelativeLayout
 
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="50dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/post_text"
-                    android:id="@+id/relative_imagevideo">
 
-                    <GridView
-                        android:id="@+id/gridView"
-                        android:layout_width="fill_parent"
-                        android:layout_height="190dp"
-                        android:columnWidth="100dp"
-                        android:drawSelectorOnTop="true"
-                        android:gravity="center"
-                        android:numColumns="2"
-                        android:focusable="true"
-                        android:visibility="gone"
-                        android:clickable="true"
-                        android:layout_marginTop="105dp"
-                        />
-
-                    <RelativeLayout
-                        android:id="@+id/videorelative"
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_view"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:visibility="invisible">
+                        android:layout_height="190dp"
+                        android:layout_marginTop="55dp"
+                       android:visibility="gone"
+                        android:scrollbars="vertical" />
+
+
                         <uk.co.jakelee.vidsta.VidstaPlayer
                             android:id="@+id/videoplayer"
                             android:layout_width="match_parent"
                             android:layout_height="190dp"
+                            android:layout_marginTop="55dp"
+                            android:visibility="gone"
                             />
 
-                    </RelativeLayout>
-                    <RelativeLayout
-                        android:id="@+id/audiorelative"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_marginTop="90dp"
-                        android:visibility="invisible">
+
+
 
                         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                             android:id="@+id/exo_player_view_audio"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_height="100dp"
+                         android:visibility="gone"
+                            android:layout_marginTop="130dp">
 
 
                         </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
-                    </RelativeLayout>
 
 
-                </RelativeLayout>
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_alignLeft="@+id/relative_imagevideo"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignStart="@+id/relative_imagevideo"
-                    android:layout_marginTop="21dp"
-                    />
+
+
+
 
             </RelativeLayout>
 
