--- a/SocialMediaApp/app/src/main/res/layout/mediaitems.xml
+++ b/SocialMediaApp/app/src/main/res/layout/mediaitems.xml
@@ -1,16 +1,28 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-     >
+<?xml version="1.0" encoding="utf-8"?>
+<net.clamour.mangalcity.Home.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/black"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/grid_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        >
-    </ImageView>
+        android:id="@+id/thumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop" />
 
-
-
-</LinearLayout>
+    <!--<TextView-->
+        <!--android:id="@+id/tvCount"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignBottom="@+id/mImageView"-->
+        <!--android:layout_alignLeft="@+id/mImageView"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:gravity="center"-->
+        <!--android:layout_alignRight="@+id/mImageView"-->
+        <!--android:layout_alignTop="@+id/mImageView"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textSize="20sp"-->
+        <!--android:text="" />-->
+</net.clamour.mangalcity.Home.SquareLayout>
