--- a/SocialMediaApp/app/src/main/res/layout/newpostitems.xml
+++ b/SocialMediaApp/app/src/main/res/layout/newpostitems.xml
@@ -124,22 +124,14 @@
                     android:visibility="gone"
 
 
-
-
                     />
-                <GridView
-                    android:id="@+id/gridView"
-                    android:layout_width="fill_parent"
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
                     android:layout_height="190dp"
-                    android:columnWidth="10dp"
-                    android:drawSelectorOnTop="true"
-                    android:gravity="center"
-                    android:numColumns="2"
-                    android:focusable="true"
-                    android:visibility="gone"
-                    android:clickable="true"
                     android:layout_marginTop="105dp"
-                    />
+                    android:visibility="gone"
+                    android:scrollbars="vertical" />
 
 
             </RelativeLayout>
